# TAG-Bench

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tag_queries.csv
expanded/: CASchool_HybridQueries.csv  TAGBench_expanded.json  combine.py  european_football_2_HybridQueries.csv  final_movies_data.json  formula_1_HybridQueries.csv  human_filtered_train.json  superhero_HybridQueries.csv  tablegrounded_movie_meta_questions.json
setup/: db_to_df.py  embed_all_dfs.sh  embed_df.py  get_dbs.sh  get_text2sql_prompts.py  get_text2sql_prompts.sh
tag/: analyze.py  hand_written.py  rag.py  text2sql.py  text2sql_lm.py  utils.py
